--- a/WebTechAssignment3/WebTechAssignment3/WebTechAssignment3.csproj
+++ b/WebTechAssignment3/WebTechAssignment3/WebTechAssignment3.csproj
@@ -60,7 +60,9 @@
     <Content Include="Account\ChangePasswordSuccess.aspx" />
     <Content Include="Account\Login.aspx" />
     <Content Include="Account\Register.aspx" />
-    <Content Include="library.jpg" />
+    <Content Include="img\1984.jpg" />
+    <Content Include="img\library.jpg" />
+    <Content Include="img\MonteCristo.jpg" />
     <Content Include="MainPage.aspx" />
     <Content Include="Styles\Site.css" />
     <Content Include="Global.asax" />
@@ -68,6 +70,7 @@
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
     <Content Include="Styles\StyleSheet.css" />
+    <Content Include="UserProfile.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -130,6 +133,13 @@
     </Compile>
     <Compile Include="LoginPage.aspx.designer.cs">
       <DependentUpon>LoginPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="UserProfile.aspx.cs">
+      <DependentUpon>UserProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserProfile.aspx.designer.cs">
+      <DependentUpon>UserProfile.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
