AllBook shows correctly
Fixed error in displaying allbook

--- a/WebTechAssignment3/WebTechAssignment3/WebTechAssignment3.csproj
+++ b/WebTechAssignment3/WebTechAssignment3/WebTechAssignment3.csproj
@@ -142,7 +142,9 @@
       <DependentUpon>UserProfile.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="MainMaster.master" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Account\Web.config" />
   </ItemGroup>
