- Added navigation bar. - Empty error messages are not shown anymore - Layout of main page fixed

--- a/WebTechAssignment3/WebTechAssignment3/WebTechAssignment3.csproj
+++ b/WebTechAssignment3/WebTechAssignment3/WebTechAssignment3.csproj
@@ -13,6 +13,7 @@
     <RootNamespace>WebTechAssignment3</RootNamespace>
     <AssemblyName>WebTechAssignment3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -159,7 +160,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>2469</DevelopmentServerPort>
+          <DevelopmentServerPort>51456</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
