Session handling done properly... User gets kicked to login page if not logged in.

--- a/WebTechAssignment3/WebTechAssignment3/Web.config
+++ b/WebTechAssignment3/WebTechAssignment3/Web.config
@@ -10,6 +10,27 @@
     <add name="ConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Database.accdb;Persist Security Info=True"
       providerName="System.Data.OleDb" />
   </connectionStrings>
+  <location path="Styles">
+    <system.web>
+      <authorization>
+        <allow users="?" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="Scripts">
+    <system.web>
+      <authorization>
+        <allow users="?" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="img">
+    <system.web>
+      <authorization>
+        <allow users="?" />
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
@@ -17,8 +38,11 @@
       </assemblies>
     </compilation>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login.aspx" defaultUrl="~/Account/Main.aspx"  timeout="2880" />
+      <forms loginUrl="~/LoginPage.aspx" defaultUrl="~/MainPage.aspx"  timeout="2880" />
     </authentication>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
     <membership>
       <providers>
         <clear />
